<resources>
    <string name="app_name">mediaPlayerDm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_00_00_00">00:00:00</string>

    <string-array name="theme">
        <item>彩色</item>
        <item>蓝色</item>
        <item>绿色</item>
        <item>雪景</item>
    </string-array>

    <string-array name="themes_play">
        <item>单个播放</item>
        <item>单个循环</item>
    </string-array>
    <string name="_mediaName">名字</string>
    <string name="_mediaSize">视频大小</string>
    <string name="_MediaDurate">持续时间</string>
    <string name="_justPlay">最近播放</string>
    <string name="_00_00_00_">00:00:00/</string>
    <string name="_rewind">快退</string>
    <string name="_play_pouse">播放/暂停</string>
    <string name="_forward">快进</string>
    <string name="_soundAdd">+</string>
    <string name="__soundReduce">-</string>
    <string name="_microPicture">缩略图</string>
    <string name="_setTheme">设置主题</string>
    <string name="_playMode">播放模式</string>
    <string name="_exit">退出</string>
    <string name="_update">刷新</string>
    <string name="_overFile">查看文件</string>
    <string name="_back">返回上一级</string>
    <string name="_currentPath">当前路径</string>
    <string name="_playList">播放列表</string>
    <string name="_fileList">文件列表</string>

    <string name="renyu">人鱼线雕刻</string>

    <string name="please_check_net">请检查你的网络连接...</string>
    <string name="empty_null"></string>
    <string name="need_permission">请允许相关权限才能进行相关操作</string>
    <string name="please_grant_app_permission">请到设置里授权该APP相关权限，否则无法使用。</string>


    <string name="no_network_layout">网络好像开小差了~</string>
    <string name="no_network_reload">重新加载</string>
    <string name="settings">设置</string>

</resources>
