<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_setTheme"
        android:orderInCategory="1"
        android:title="@string/_setTheme"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_playMode"
        android:orderInCategory="2"
        android:title="@string/_playMode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_update"
        android:orderInCategory="3"
        android:title="@string/_update"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_exit"
        android:orderInCategory="5"
        android:title="@string/_exit"
        app:showAsAction="ifRoom" />


</menu>
