<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/iv_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
         android:contentDescription="@string/_microPicture"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_mediaName" />
        

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:text="@string/_mediaSize" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_toRightOf="@id/tv_size"
            android:text="@string/_MediaDurate" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_isplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/_justPlay"
         />

</LinearLayout>