<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/float_win"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#FFF0F5"
    android:orientation="vertical" >
    
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:max="0" />

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/seekBar"
        android:text="@string/_00_00_00_"
        android:textColor="@android:color/black"
       android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_durate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seekBar"
        android:layout_toRightOf="@id/tv_second"
        android:text="@string/_00_00_00"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seekBar"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rewind_selector"
            android:contentDescription="@string/_rewind" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pause"
            android:contentDescription="@string/_play_pouse" />

        <ImageView
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/forward_selector"
            android:contentDescription="@string/_forward" />

        <Button
            android:id="@+id/Bt_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:text="@string/_soundAdd" />

        <Button
            android:id="@+id/Bt_reduce"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/__soundReduce" />
    </LinearLayout>

</RelativeLayout>